Fixed mobile alignment

--- a/css/style2.css
+++ b/css/style2.css
@@ -149,6 +149,7 @@ ul li {
 display: inline;
 margin: 0 5% 0 5%;
 text-transform: uppercase;
+text-align: center;
 
 }
 
@@ -231,6 +232,10 @@ h4 {
   font-size: 1.5vh;
 }
 p {
-  font-size: 2vmin;
+  font-size: 5vmin;
+}
+
+.col-4 {
+	text-align: center;
 }
 }
